--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,8 +1,83 @@
 .cartas{
-    border: solid 5px;
-    margin: 10px;
-}
-.h2jiji{
-    color: brown;
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    height:541px;
+    border: solid 5px rgb(5, 5, 5);
+    border-radius: 40px;
+    background-color: none;
+    box-shadow: 0 0 20px rgba(123, 3, 251, 10.0) ; 
+    margin: 30px 30px 30px 30px;
+    position: relative;
 }
 
+.cartas:hover {
+    transform: scale(1.2);
+    transition: 0.5s ease;
+} 
+
+
+.lnombre{
+    color: rgb(73, 195, 39) ;
+    font-family:fantasy;
+    box-shadow: 0 0 50px  rgb(5, 239, 16) ;
+    background-color: rgb(14, 195, 195, 0.5) ;
+    font-size: 30px;
+    text-shadow: 5px 5px 5px  rgb(129, 4, 97);
+}
+
+.bboton{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.button{
+    position:relative;
+    border-radius: 10px;
+    margin:8px 10px 0px 0px;
+    cursor: pointer;
+    transition: 0.5s ease;
+    background-color: rgba(13, 55, 246, 0.5);
+    box-shadow: 0 0 20px rgba(123, 3, 251, 10.0)
+}
+
+.button:hover{
+    transform: translateY(-20%);
+}
+
+.imagen{
+    width: -20px;
+    margin-top: -15px;
+    
+}
+
+.piecarta{
+    margin: 0;
+    background-color:rgb(14, 195, 195, 0.5);
+    font-family:serif; 
+    border-radius: 0px 0px 30px 30px;
+    
+}
+
+
+.link{
+ text-decoration: none;
+ 
+ 
+}
+
+.ids{
+  font-size: 30px;
+ margin-top: -25px;
+ color: black;  
+ border-radius: 50px;
+ border:solid 3px;
+ width:25% ;
+ margin-left: 8px;
+ background-color: rgb(11, 240, 240, 0.3);
+}
+.ids:hover{
+    transform: translateY(-10%);
+    transition: 0.5s ease;
+
+}
