--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -1,7 +1,9 @@
 
 .carta{
     display: flex;
-    height: 530px;
-    transition: 3s;
-    background-size: cover;
-}
+    padding: 10%;
+    margin: auto;
+    justify-content: space-evenly;
+    justify-content: center;
+    transition: 3s; 
+};
