--- a/src/components/Form/form.module.css
+++ b/src/components/Form/form.module.css
@@ -1,17 +1,68 @@
-.container{
-     background-color: aqua;
-    display: flex;
-    flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 80px;
-border-radius: 20px;
-margin-left: 460px;
-margin-top: 100px;
-width: 150px;
-
+.bax{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    padding: 40px;
+    background: rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(93, 230, 9, 0.5);
+    border-radius: 10px;
 }
-
-.warning{
-    background-color: brown;
+.bax h2{
+    margin: 0 0 30px;
+    padding: 0px;
+    color: #fff;
+    text-align: center;
+}
+.bax .inputbax{
+    position: relative;
+}
+.bax .inputbax input{
+    width: 100%;
+    padding: 10px 0px;
+    font-size: 16px;
+    color: #fff;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+    border: none;
+    outline: none;
+    background: transparent;
+    border-bottom: 1px solid #fff;
+}
+.bax .inputbax label{
+    position:absolute;
+    top: 0;
+    left: 0;
+    letter-spacing: 1px;
+    padding: 10px 0px;
+    font-size: 16px;
+    color: #fff;
+    transition: .5s;
+}
+.bax .inputbax input:focus ~ label,
+.bax .inputbax input:valid ~ label{
+    top: -18px;
+    left: 0px;
+    color: #03a9f4;
+    font-size: 12px;
+}
+.bax .botonsin{
+    background: transparent;
+    border: none;
+    outline: none;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    
+}
+.botonsin:hover{
+transform: scale(1.3);
+    transition: 0.4s ease;
+    box-shadow: 0 0 5px rgba(240, 7, 201),
+               0 0 25px rgba(240, 7, 201),
+               0 0 50px rgba(240, 7, 201),
+              0 0 100px rgba(240, 7, 201);
 }
