--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -50,7 +50,7 @@
     
 }
 .button:hover{
-transform:scale(0.8);
+transform:scale(2.0);
 /* transform: translateY(-20px) scale(1.2); */
 }
 
@@ -63,7 +63,7 @@ transform:scale(0.8);
     position: absolute;
     opacity: 0.9;
     
-    animation-delay: +1s;
+    animation-delay: 1s;
     }
     @keyframes rotate{
         0%{
