--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -1,8 +1,8 @@
 .carta{
 display: flex;
-justify-content: center;
-align-items: center;
-margin-top: 200px;
+position:absolute;
+left: 400px;
+top: 200px;
   /* height: 300px;
   width: 300px;
   animation: rotate 30s linear infinite;
